fix footer spacing

--- a/scss/_utility.scss
+++ b/scss/_utility.scss
@@ -6,10 +6,7 @@
     margin: 0 auto;
     overflow: auto;
 
-    ul{
-        margin-left: 2rem;
-        margin-bottom: 2rem;
-    }
+
 }
 
 .contact-info{
