--- a/scss/style.scss
+++ b/scss/style.scss
@@ -355,6 +355,10 @@ p {
 
 .bio-box{
     margin-bottom: 5rem;
+    ul{
+        margin-left: 2rem;
+        margin-bottom: 2rem;
+    }
 }
 
 @import 'utility';
